Creation, login, logout fully functional

--- a/queertk/authentication/templates/login.html
+++ b/queertk/authentication/templates/login.html
@@ -1,5 +1,3 @@
-{% extends "layout.jinja2" %}
-
 {% block content %}
 <div class="form-wrapper">
 
@@ -18,7 +16,7 @@
 
     <h1>Log In</h1>
 
-    <form method="POST" action="/login">
+    <form method="POST" action="/auth/login">
         {{ form.csrf_token }}
 
         <fieldset class="email">
@@ -47,9 +45,9 @@
             {{ form.submit }}
         </div>
 
-        <div class="login-signup">
+        <div class="login-register">
             <span>Don't have an account?</span>
-            <a href="{{ url_for('bp_authentication.signup') }}">Sign up.</a>
+            <a href="{{ url_for('authentication.register') }}">Sign up.</a>
         </div>
 
     </form>
