--- a/queertk/authentication/templates/register.html
+++ b/queertk/authentication/templates/register.html
@@ -1,5 +1,3 @@
-{% extends "layout.jinja2" %}
-
 {% block content %}
 <div class="form-wrapper">
 
@@ -18,8 +16,20 @@
 
     <h1>Sign Up</h1>
 
-    <form method="POST" action="/signup">
+    <form method="POST" action="/auth/register">
         {{ form.csrf_token }}
+
+        <fieldset class="username">
+            {{ form.username.label }}
+            {{ form.username }}
+            {% if form.username.errors %}
+            <ul class="errors">
+                {% for error in form.username.errors %}
+                <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        </fieldset>
 
         <fieldset class="name">
             {{ form.name.label }}
@@ -27,7 +37,8 @@
             {% if form.name.errors %}
             <ul class="errors">
                 {% for error in form.email.errors %}
-                <li>{{ error }}</li>{% endfor %}
+                <li>{{ error }}</li>
+                {% endfor %}
             </ul>
             {% endif %}
         </fieldset>
@@ -65,21 +76,16 @@
             {% endif %}
         </fieldset>
 
-        <fieldset class="website">
-            {{ form.website.label }}
-            {{ form.website(placeholder='https://example.com') }}
-        </fieldset>
-
         <div class="submit-button">
             {{ form.submit }}
         </div>
 
     </form>
 
-    <div class="login-signup">
+    <div class="login-register">
         <div>
             <span>Already have an account?</span>
-            <a href="{{ url_for('bp_authentication.login') }}">Log in.</a>
+            <a href="{{ url_for('authentication.login') }}">Log in.</a>
         </div>
     </div>
 </div>
