--- a/queertk/production/templates/production.html
+++ b/queertk/production/templates/production.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <h1>Production Description:</h1>
 {{ production.description }}
 
@@ -30,3 +33,6 @@
     <li>{{ c.credit_name }} as {{ c.role }}</li>
     {% endfor %}
 </ol>
+{% endblock %}
+
+
