--- a/queertk/static/base.css
+++ b/queertk/static/base.css
@@ -52,3 +52,118 @@ aside {
         flex: 0 0 20vw;
     }
 }
+
+/* Setup */
+html {
+    /* Change default typefaces here */
+    font-family: serif;
+    font-size: 137.5%;
+    -webkit-font-smoothing: antialiased;
+}
+
+/* Copy & Lists */
+p {
+    line-height: 1.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0;
+}
+
+ul,
+ol {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+ul li,
+ol li {
+    line-height: 1.5rem;
+}
+
+ul ul,
+ol ul,
+ul ol,
+ol ol {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+blockquote {
+    line-height: 1.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+/* Typography */
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+li {
+    font-size: clamp(var(--min), var(--val), var(--max));
+}
+
+h1 {
+    --min: 2em; /* minimum value */
+    --val: 5vw; /* preferred value = 5% viewport width */
+    --max: 3em; /* maximum value */
+}
+
+h2 {
+    --min: 1.75em;
+    --val: 4.5vw;
+    --max: 2.8em;
+}
+
+h3 {
+    --min: 1.5em;
+    --val: 4vw;
+    --max: 2.6em;
+}
+
+h4 {
+    --min: 1.25em;
+    --val: 3.5vw;
+    --max: 2.4em;
+}
+
+h5 {
+    --min: 1em;
+    --val: 3vw;
+    --max: 2.20em;
+}
+
+p, li {
+    --min: 1em;
+    --val: 1.75vw;
+    --max: 1.25em;
+}
+
+/* Tables */
+table {
+    margin-top: 1.5rem;
+    border-spacing: 0px;
+    border-collapse: collapse;
+}
+
+table td,
+table th {
+    padding: 0;
+    line-height: 33px;
+}
+
+/* Code blocks */
+code {
+    vertical-align: bottom;
+}
+
+/* Leading paragraph text */
+.lead {
+    font-size: 1.414rem;
+}
+
+/* Hug the block above you */
+.hug {
+    margin-top: 0;
+}
