--- a/queertk/templates/base.html
+++ b/queertk/templates/base.html
@@ -14,6 +14,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='typography.css') }}">
         <title>Title</title>
     </head>
     <body>
