--- a/queertk/static/base.css
+++ b/queertk/static/base.css
@@ -93,52 +93,7 @@ blockquote {
     margin-bottom: 1.5rem;
 }
 
-/* Typography */
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-li {
-    font-size: clamp(var(--min), var(--val), var(--max));
-}
 
-h1 {
-    --min: 2em; /* minimum value */
-    --val: 5vw; /* preferred value = 5% viewport width */
-    --max: 3em; /* maximum value */
-}
-
-h2 {
-    --min: 1.75em;
-    --val: 4.5vw;
-    --max: 2.8em;
-}
-
-h3 {
-    --min: 1.5em;
-    --val: 4vw;
-    --max: 2.6em;
-}
-
-h4 {
-    --min: 1.25em;
-    --val: 3.5vw;
-    --max: 2.4em;
-}
-
-h5 {
-    --min: 1em;
-    --val: 3vw;
-    --max: 2.20em;
-}
-
-p, li {
-    --min: 1em;
-    --val: 1.75vw;
-    --max: 1.25em;
-}
 
 /* Tables */
 table {
@@ -166,4 +121,8 @@ code {
 /* Hug the block above you */
 .hug {
     margin-top: 0;
+}
+
+.squeeze {
+    margin-bottom: 0;
 }
