Migrate responsive template from idlegame, more styling

--- a/queertk/authentication/templates/login.html
+++ b/queertk/authentication/templates/login.html
@@ -1,9 +1,7 @@
+{% extends "base.html" %}
+
 {% block content %}
 <div class="form-wrapper">
-
-    <div class="logo">
-        <img src="{{ url_for('static', filename='dist/img/logo.png') }}" alt="logo" />
-    </div>
 
     {% for message in get_flashed_messages() %}
     <div class="alert alert-warning">
