--- a/queertk/static/skeleton/css/skeleton.css
+++ b/queertk/static/skeleton/css/skeleton.css
@@ -35,6 +35,7 @@
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box; }
+
 .column,
 .columns {
   width: 100%;
@@ -118,41 +119,67 @@
 /* NOTE
 html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
-html {
-  font-size: 62.5%; }
+
 body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222; }
 
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 2rem;
-  font-weight: 300; }
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
-
-/* Larger than phablet */
-@media (min-width: 550px) {
-  h1 { font-size: 5.0rem; }
-  h2 { font-size: 4.2rem; }
-  h3 { font-size: 3.6rem; }
-  h4 { font-size: 3.0rem; }
-  h5 { font-size: 2.4rem; }
-  h6 { font-size: 1.5rem; }
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+li {
+  font-size: clamp(var(--min), var(--val), var(--max));
 }
 
-p {
-  margin-top: 0; }
+h1 {
+  --min: 1.9em;
+  --val: 4.70vw;
+  --max: 3em;
+  font-family: 'Domine', serif;
+}
+
+h2 {
+  --min: 1.6em;
+  --val: 3.9vw;
+  --max: 2.4em;
+  font-family: 'Domine', serif;
+}
+
+h3 {
+  --min: 1.3em;
+  --val: 3vw;
+  --max: 1.8em;
+  font-family: 'Domine', serif;
+}
+
+h4 {
+  --min: 1em;
+  --val: 2.1vw;
+  --max: 1.2em;
+  font-family: 'Domine', serif;
+}
+
+h5 {
+  --min: 0.85em;
+  --val: 1.2vw;
+  --max: 1em;
+  font-family: 'Domine', serif;
+}
+
+p,
+li {
+  --min: 0.85em;
+  --val: 1.2vw;
+  --max: 1em;
+  font-family: 'Jost', sans-serif;
+}
 
 
 /* Links
@@ -173,7 +200,7 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  color: #FFF;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
@@ -186,6 +213,7 @@ input[type="button"] {
   border-radius: 4px;
   border: 1px solid #bbb;
   cursor: pointer;
+  font-family: 'Jost', sans-serif;
   box-sizing: border-box; }
 .button:hover,
 button:hover,
@@ -197,7 +225,7 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: #333;
+  color: #FFF;
   border-color: #888;
   outline: 0; }
 .button.button-primary,
