--- a/queertk/templates/base.html
+++ b/queertk/templates/base.html
@@ -1,11 +1,4 @@
-{% block auth %}
-{% if current_user.is_authenticated %}
-<span>Hi, {{ current_user.name }}. <a href="{{ url_for('authentication.logout') }}">Logout.</a></span>
-{% endif %}
-{% if not current_user.is_authenticated %}
-<a href="{{ url_for('authentication.login') }}">Login</a>
-{% endif %}
-{% endblock %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,36 +6,93 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='sass/base.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='skeleton/css/skeleton.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='sass/style.css') }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <title>Title</title>
+        <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">        <title>Title</title>
     </head>
 
     <body>
-        <div id="main">
+        <!-- Main Content -->
+        <main>
+
+            <!-- Header -->
             <header>
-                {% block header %}
-                {% endblock %}
+                <div class="header wrapper">
+                    {% block auth %}
+                    {% if current_user.is_authenticated %}
+                    <span>Hi, {{ current_user.name }}. <a href="{{ url_for('authentication.logout') }}">Logout.</a></span>
+                    {% endif %}
+                    {% if not current_user.is_authenticated %}
+                    <a href="{{ url_for('authentication.login') }}">Login</a>
+                    {% endif %}
+                    {% endblock %}
+                </div>
             </header>
 
-            <content>
-                {% block content %}
-                {% endblock %}
-            </content>
+            <!-- Window Title Bar -->
+            <div class="window-title wrapper">
+                <p style="padding: 0; margin: 0;">Control Room</p>
+            </div>
 
-            <aside>
-                {% block aside %}
-                {% endblock %}
-            </aside>
+            <!-- Container -->
+            <div class="flex-container wrapper">
 
-            <footer>
-                {% block footer %}
-                {% endblock %}
-                <script src="{{ url_for('static', filename='base.js') }}"></script>
-            </footer>
-        </div>
+                <!-- Sidebar GoTo Menu -->
+                <aside class="sidebar">
+                    <div onClick="goTo('control')" id="goToControl" class="button goTo">Control Room</div>
+                    <div onClick="goTo('software')" id="goToSoftware" class="button goTo">Software</div>
+                    <div onClick="goTo('contracts')" id="goToContracts" class="button goTo">Contracts</div>
+                    <div class="button">Personnel</div>
+                    <div class="button">Storage</div>
+                    <div class="button disabled">Research</div>
+                    <div style="flex: 1 1 auto;"></div>
+                    <div class="button">Settings</div>
+                    <div class="button">Event Log</div>
+                    <div class="button disabled">Help</div>
+                </aside>
+
+                <!-- Container -->
+                <div class="flex-container_inner">
+
+                    <!-- News -->
+                    <section class="news accordion">
+                        <div>
+                            <p class="toggle">News & Updates <span><img style="float: right;" height="25px" width="25px"
+                                        src="assets/icons/plus-dark.svg"></img></span></p>
+                            <div class="panel">
+                                <strong>Updates</strong>
+                                <ul>
+                                    <li>Item 1</li>
+                                    <li>Item 2</li>
+                                    <li>Item 3</li>
+                                </ul>
+                                <h3>More Content</h3>
+                                <p>Let's talk about something else.</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <!-- Content -->
+                    <section class="content">
+                        <div class="wrapper">
+
+                            <!-- Screen / Control -->
+                            <div id="screen-control">
+                                {% block content %}
+                                {% endblock %}
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </main>
+
+        <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
+        <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/base.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script> <!-- jquery 3.6.0 -->
     </body>
 </html>
