--- a/queertk/static/skeleton/css/skeleton.css
+++ b/queertk/static/skeleton/css/skeleton.css
@@ -160,22 +160,25 @@ h3 {
 }
 
 h4 {
-  --min: 1em;
+  --min: 1.1em;
   --val: 2.1vw;
-  --max: 1.2em;
+  --max: 1.3em;
   font-family: 'Domine', serif;
 }
 
 h5 {
-  --min: 0.85em;
+  --min: 0.95em;
   --val: 1.2vw;
   --max: 1em;
   font-family: 'Domine', serif;
 }
 
 p,
-li {
-  --min: 0.85em;
+a,
+span,
+li,
+button {
+  --min: 1.1em;
   --val: 1.2vw;
   --max: 1em;
   font-family: 'Jost', sans-serif;
@@ -185,9 +188,31 @@ li {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  position: relative;
+  color: rgb(212, 143, 143);
+  text-decoration: none;
+}
+
 a:hover {
-  color: #0FA0CE; }
+  color: rgb(189, 100, 100);
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(212, 143, 143);
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+a:hover::before {
+  transform: scaleX(1);
+}
 
 
 /* Buttons
@@ -201,19 +226,16 @@ input[type="button"] {
   height: 38px;
   padding: 0 30px;
   color: #FFF;
-  text-align: center;
-  font-size: 11px;
-  font-weight: 600;
   line-height: 38px;
   letter-spacing: .1rem;
-  text-transform: uppercase;
+  font-family: 'Jost', sans-serif;
+  text-align: center;
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid #bbb;
   cursor: pointer;
-  font-family: 'Jost', sans-serif;
   box-sizing: border-box; }
 .button:hover,
 button:hover,
