--- a/queertk/templates/base.html
+++ b/queertk/templates/base.html
@@ -6,12 +6,22 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        {% if favicon %}
+        <link rel="shortcut icon" href="{{ favicon }}">
+        {% else %}
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        {% endif %}
         <link rel="stylesheet" href="{{ url_for('static', filename='sass/base.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='skeleton/css/skeleton.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='sass/style.css') }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">        <title>Title</title>
+        <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        {% if title %}
+        <title>{{ title }}</title>
+        {% else %}
+        <title>Untitled</title>
+        {% endif %}
     </head>
 
     <body>
@@ -42,48 +52,23 @@
 
                 <!-- Sidebar GoTo Menu -->
                 <aside class="sidebar">
-                    <div onClick="goTo('control')" id="goToControl" class="button goTo">Control Room</div>
-                    <div onClick="goTo('software')" id="goToSoftware" class="button goTo">Software</div>
-                    <div onClick="goTo('contracts')" id="goToContracts" class="button goTo">Contracts</div>
-                    <div class="button">Personnel</div>
-                    <div class="button">Storage</div>
-                    <div class="button disabled">Research</div>
-                    <div style="flex: 1 1 auto;"></div>
-                    <div class="button">Settings</div>
-                    <div class="button">Event Log</div>
-                    <div class="button disabled">Help</div>
+                    <a href="#">Home</a>
+                    <a href="#">Events</a>
+                    <a href="#">News</a>
+                    <a href="#">About Us</a>
+                    <a style="flex: 1 1 auto;"></a>
+                    <a href="#">My Account</a>
+                    <a href="#">Contact Us</a>
                 </aside>
 
                 <!-- Container -->
                 <div class="flex-container_inner">
 
-                    <!-- News -->
-                    <section class="news accordion">
-                        <div>
-                            <p class="toggle">News & Updates <span><img style="float: right;" height="25px" width="25px"
-                                        src="assets/icons/plus-dark.svg"></img></span></p>
-                            <div class="panel">
-                                <strong>Updates</strong>
-                                <ul>
-                                    <li>Item 1</li>
-                                    <li>Item 2</li>
-                                    <li>Item 3</li>
-                                </ul>
-                                <h3>More Content</h3>
-                                <p>Let's talk about something else.</p>
-                            </div>
-                        </div>
-                    </section>
-
                     <!-- Content -->
                     <section class="content">
                         <div class="wrapper">
-
-                            <!-- Screen / Control -->
-                            <div id="screen-control">
-                                {% block content %}
-                                {% endblock %}
-                            </div>
+                            {% block content %}
+                            {% endblock %}
                         </div>
                     </section>
                 </div>
