--- a/queertk/templates/base.html
+++ b/queertk/templates/base.html
@@ -42,8 +42,8 @@
                 </div>
             </header>
 
-            <!-- Window Title Bar -->
-            <div class="window-title wrapper">
+            <!-- Page Title Bar -->
+            <div class="page-title wrapper">
                 <p style="padding: 0; margin: 0;">Control Room</p>
             </div>
 
