--- a/queertk/static/sass/style.css
+++ b/queertk/static/sass/style.css
@@ -34,8 +34,9 @@ aside {
 }
 
 header {
-  background: #262626;
+  background: #1f1f1f;
   padding: 10px;
+  height: 30px;
 }
 
 header .header {
@@ -63,13 +64,13 @@ header .header span {
       -ms-flex-align: center;
           align-items: center;
   background: #511b1b;
-  height: 40px;
+  height: 50px;
   text-size: 0.65rem;
   color: #ffffffb4;
 }
 
 .accordion, .panel {
-  color: #262626;
+  color: #1f1f1f;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   height: auto;
@@ -101,7 +102,7 @@ header .header span {
 }
 
 .content {
-  background: #2a2828;
+  background: #1f1f1f;
   padding-top: 1rem;
   overflow: auto;
   color: #f3ecf2;
@@ -151,7 +152,7 @@ header .header span {
 }
 
 .flex-container {
-  height: calc(100vh - 40px);
+  height: calc(100vh - 50px);
   margin: auto;
   -webkit-box-flex: 1;
       -ms-flex: 1 100%;
