--- a/queertk/static/sass/style.css
+++ b/queertk/static/sass/style.css
@@ -4,7 +4,6 @@ html {
 }
 
 body {
-  overflow: hidden;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -47,6 +46,9 @@ header .header {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header .header span {
@@ -67,38 +69,6 @@ header .header span {
   height: 50px;
   text-size: 0.65rem;
   color: #ffffffb4;
-}
-
-.accordion, .panel {
-  color: #1f1f1f;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  height: auto;
-  overflow: hidden;
-}
-
-.accordion .panel, .panel .panel {
-  background: #eed2b1;
-  display: none;
-}
-
-.accordion .panel.active, .panel .panel.active {
-  padding: 15px 10px 10px 10px;
-  opacity: 1;
-  height: auto;
-  max-height: 500px;
-}
-
-.accordion .toggle, .panel .toggle {
-  padding: 8px;
-  margin: 0;
-  background: #eed2b1;
-  -webkit-transition-duration: 0.4s;
-          transition-duration: 0.4s;
-}
-
-.accordion .toggle:hover, .panel .toggle:hover {
-  background: #d5aa78;
 }
 
 .content {
@@ -129,6 +99,7 @@ header .header span {
   -webkit-backdrop-filter: blur(15px);
           backdrop-filter: blur(15px);
   width: 20rem;
+  max-height: calc(100vh - 100px);
 }
 
 .sidebar a {
@@ -152,7 +123,7 @@ header .header span {
 }
 
 .flex-container {
-  height: calc(100vh - 50px);
+  height: calc(100vh - 100px);
   margin: auto;
   -webkit-box-flex: 1;
       -ms-flex: 1 100%;
