--- a/queertk/static/sass/style.sass
+++ b/queertk/static/sass/style.sass
@@ -18,7 +18,7 @@ html
     background-size: cover
 
 body
-    overflow: hidden
+    // overflow: hidden
     height: 100%
     margin: 0
     padding: 0
@@ -48,6 +48,7 @@ header
     .header
         display: flex
         flex-direction: row
+        align-items: center
     
         span
             color: #fff
@@ -60,32 +61,6 @@ header
     height: $page-title-height
     text-size: 0.65rem
     color: #ffffffb4
-
-.accordion, .panel
-    color: $bg-dark
-    -webkit-transition: all 0.2s ease-in-out
-    transition: all 0.2s ease-in-out
-    height: auto
-    overflow: hidden
-
-    .panel
-        background: #eed2b1
-        display: none
-
-        &.active
-            padding: 15px 10px 10px 10px
-            opacity: 1
-            height: auto
-            max-height: 500px
-
-    .toggle
-        padding: 8px
-        margin: 0
-        background: #eed2b1
-        transition-duration: 0.4s
-
-        &:hover
-            background: #d5aa78
 
 .content
     background: $bg-dark
@@ -105,6 +80,7 @@ header
     background: $bg-dark-blur
     backdrop-filter: blur(15px)
     width: 20rem
+    max-height: calc(100vh - 100px)
 
     a
         margin-top: 1em
@@ -119,7 +95,7 @@ header
     margin: auto
 
 .flex-container
-    height: calc(100vh - 50px)
+    height: calc(100vh - 100px)
     margin: auto
     flex: 1 100%
 
