--- a/queertk/static/sass/style.sass
+++ b/queertk/static/sass/style.sass
@@ -1,15 +1,3 @@
-$bg-dark: #1f1f1f
-$bg-dark-blur: #1f1e1fde
-$theme-primary: #b71e1e
-$theme-primary-dark: #511b1b
-$theme-secondary: #4b4a9c
-$theme-secondary-dark: #25246d
-
-$bg-corner-radius: 6px
-$fg-corner-radius: 4px
-
-$page-title-height: 50px
-
 html
     background: url("../background.jpg") no-repeat center center fixed
     -webkit-background-size: cover
@@ -120,3 +108,11 @@ header
 
   to
     opacity: 0
+
+/* Hug the block above you */
+.hug 
+    margin-top: 0
+
+/* Squeeze the block beneath you */
+.squeeze 
+    margin-bottom: 0
