--- a/queertk/static/sass/base.sass
+++ b/queertk/static/sass/base.sass
@@ -1,7 +1,3 @@
-/* Hug the block above you */
-.hug 
-    margin-top: 0
-
-/* Squeeze the block beneath you */
-.squeeze 
-    margin-bottom: 0
+@import "variables"
+@import "boilerplate"
+@import "style"
