--- a/queertk/templates/base.html
+++ b/queertk/templates/base.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -12,8 +10,6 @@
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         {% endif %}
         <link rel="stylesheet" href="{{ url_for('static', filename='sass/base.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='skeleton/css/skeleton.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='sass/style.css') }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -34,8 +30,7 @@
                     {% block auth %}
                     {% if current_user.is_authenticated %}
                     <span>Hi, {{ current_user.name }}. <a href="{{ url_for('authentication.logout') }}">Logout.</a></span>
-                    {% endif %}
-                    {% if not current_user.is_authenticated %}
+                    {% else %}
                     <span>You're not logged in. <a href="{{ url_for('authentication.login') }}"> Login?</a></span>
                     {% endif %}
                     {% endblock %}
@@ -44,7 +39,13 @@
 
             <!-- Page Title Bar -->
             <div class="page-title wrapper">
-                <p style="padding: 0; margin: 0;">Control Room</p>
+                <p style="padding: 0; margin: 0;">
+                    {% if title %}
+                    {{ title }}
+                    {% else %}
+                    Page
+                    {% endif %}
+                </p>
             </div>
 
             <!-- Container -->
@@ -55,10 +56,11 @@
                     <a href="#">Home</a>
                     <a href="#">Events</a>
                     <a href="#">News</a>
-                    <a href="#">About Us</a>
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
                     <a style="flex: 1 1 auto;"></a>
                     <a href="#">My Account</a>
-                    <a href="#">Contact Us</a>
+                    <a href="#">About This Site</a>
                 </aside>
 
                 <!-- Container -->
