--- a/queertk/static/sass/base.css
+++ b/queertk/static/sass/base.css
@@ -1,440 +1,2 @@
-.container {
-  position: relative;
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.column,
-.columns {
-  width: 100%;
-  float: left;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-/* For devices larger than 400px */
-@media (min-width: 400px) {
-  .container {
-    width: 85%;
-    padding: 0;
-  }
-}
-
-/* For devices larger than 550px */
-@media (min-width: 550px) {
-  .container {
-    width: 80%;
-  }
-  .column,
-  .columns {
-    margin-left: 4%;
-  }
-  .column:first-child,
-  .columns:first-child {
-    margin-left: 0;
-  }
-  .one.column,
-  .one.columns {
-    width: 4.66666666667%;
-  }
-  .two.columns {
-    width: 13.3333333333%;
-  }
-  .three.columns {
-    width: 22%;
-  }
-  .four.columns {
-    width: 30.6666666667%;
-  }
-  .five.columns {
-    width: 39.3333333333%;
-  }
-  .six.columns {
-    width: 48%;
-  }
-  .seven.columns {
-    width: 56.6666666667%;
-  }
-  .eight.columns {
-    width: 65.3333333333%;
-  }
-  .nine.columns {
-    width: 74.0%;
-  }
-  .ten.columns {
-    width: 82.6666666667%;
-  }
-  .eleven.columns {
-    width: 91.3333333333%;
-  }
-  .twelve.columns {
-    width: 100%;
-    margin-left: 0;
-  }
-  .one-third.column {
-    width: 30.6666666667%;
-  }
-  .two-thirds.column {
-    width: 65.3333333333%;
-  }
-  .one-half.column {
-    width: 48%;
-  }
-  /* Offsets */
-  .offset-by-one.column,
-  .offset-by-one.columns {
-    margin-left: 8.66666666667%;
-  }
-  .offset-by-two.column,
-  .offset-by-two.columns {
-    margin-left: 17.3333333333%;
-  }
-  .offset-by-three.column,
-  .offset-by-three.columns {
-    margin-left: 26%;
-  }
-  .offset-by-four.column,
-  .offset-by-four.columns {
-    margin-left: 34.6666666667%;
-  }
-  .offset-by-five.column,
-  .offset-by-five.columns {
-    margin-left: 43.3333333333%;
-  }
-  .offset-by-six.column,
-  .offset-by-six.columns {
-    margin-left: 52%;
-  }
-  .offset-by-seven.column,
-  .offset-by-seven.columns {
-    margin-left: 60.6666666667%;
-  }
-  .offset-by-eight.column,
-  .offset-by-eight.columns {
-    margin-left: 69.3333333333%;
-  }
-  .offset-by-nine.column,
-  .offset-by-nine.columns {
-    margin-left: 78.0%;
-  }
-  .offset-by-ten.column,
-  .offset-by-ten.columns {
-    margin-left: 86.6666666667%;
-  }
-  .offset-by-eleven.column,
-  .offset-by-eleven.columns {
-    margin-left: 95.3333333333%;
-  }
-  .offset-by-one-third.column,
-  .offset-by-one-third.columns {
-    margin-left: 34.6666666667%;
-  }
-  .offset-by-two-thirds.column,
-  .offset-by-two-thirds.columns {
-    margin-left: 69.3333333333%;
-  }
-  .offset-by-one-half.column,
-  .offset-by-one-half.columns {
-    margin-left: 52%;
-  }
-}
-
-/* Base Styles */
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-size: 1.5em;
-  line-height: 1.6;
-  font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222;
-}
-
-/* Typography */
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-li {
-  font-size: clamp(var(--min), var(--val), var(--max));
-}
-
-h1 {
-  --min: 1.9em;
-  --val: 4.70vw;
-  --max: 3em;
-  font-family: 'Domine', serif;
-}
-
-h2 {
-  --min: 1.6em;
-  --val: 3.9vw;
-  --max: 2.4em;
-  font-family: 'Domine', serif;
-}
-
-h3 {
-  --min: 1.3em;
-  --val: 3vw;
-  --max: 1.8em;
-  font-family: 'Domine', serif;
-}
-
-h4 {
-  --min: 1.1em;
-  --val: 2.1vw;
-  --max: 1.3em;
-  font-family: 'Domine', serif;
-}
-
-h5 {
-  --min: 0.95em;
-  --val: 1.2vw;
-  --max: 1em;
-  font-family: 'Domine', serif;
-}
-
-p,
-a,
-span,
-li,
-button {
-  --min: 1.1em;
-  --val: 1.2vw;
-  --max: 1em;
-  font-family: 'Jost', sans-serif;
-}
-
-/* Links */
-a {
-  position: relative;
-  color: #efabab;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #cf7272;
-}
-
-a ::before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #d48f8f;
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
-}
-
-a:hover::before {
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-}
-
-html {
-  background: url("../background.jpg") no-repeat center center fixed;
-  background-size: cover;
-}
-
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-aside {
-  margin: 0;
-  padding: 20px;
-}
-
-.badge {
-  padding: 3px 6px;
-  margin: 0 4px;
-  border-radius: 4px;
-  background: #b71e1e;
-  color: #fff;
-  font-size: 0.8rem;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.badge img {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-header {
-  background: #1f1f1f;
-  padding: 10px;
-  height: 30px;
-}
-
-header .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-header .header span {
-  color: #fff;
-}
-
-.page-title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #511b1b;
-  height: 50px;
-  text-size: 0.65rem;
-  color: #ffffffb4;
-}
-
-.content {
-  background: #1f1f1f;
-  padding-top: 1rem;
-  overflow: auto;
-  color: #f3ecf2;
-  height: 100%;
-}
-
-.content .wrapper {
-  margin: auto;
-  max-width: 90%;
-}
-
-.sidebar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #1f1e1fde;
-  -webkit-backdrop-filter: blur(15px);
-          backdrop-filter: blur(15px);
-  width: 20rem;
-  max-height: calc(100vh - 100px);
-}
-
-.sidebar a {
-  margin-top: 1em;
-  font-size: clamp(1.1em, 2.1vw, 1.3em);
-}
-
-.flex-container_inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-}
-
-.wrapper {
-  margin: auto;
-}
-
-.flex-container {
-  height: calc(100vh - 100px);
-  margin: auto;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 100%;
-          flex: 1 100%;
-}
-
-@media screen and (min-width: 640px) {
-  .flex-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .sidebar {
-    display: none;
-  }
-}
-
-@-webkit-keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-@keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-/* Hug the block above you */
-.hug {
-  margin-top: 0;
-}
-
-/* Squeeze the block beneath you */
-.squeeze {
-  margin-bottom: 0;
-}
+@use "variables" {}@use "style" {}@use "boilerplate" {}
 /*# sourceMappingURL=base.css.map */
