--- a/queertk/static/sass/boilerplate.sass
+++ b/queertk/static/sass/boilerplate.sass
@@ -164,14 +164,14 @@ p,
 a,
 span,
 li,
-button
+button,
     --min: 1.1em
     --val: 1.2vw
     --max: 1em
     font-family: 'Jost', sans-serif
 
 /* Links
-a
+a, .link-like
     position: relative
     color: rgb(239, 171, 171)
     text-decoration: none
