avatar to header, add poster to prod pages, format perf datetime

--- a/queertk/production/templates/production.html
+++ b/queertk/production/templates/production.html
@@ -35,7 +35,7 @@
 <ol>
     {% for p in performances %}
     <span>
-        <li>{{ p.datetime }}</li>
+        <li>{{ p.datetime|format_datetime() }}</li>
     </span>
     {% endfor %}
 </ol>
