--- a/queertk/static/sass/style.sass
+++ b/queertk/static/sass/style.sass
@@ -137,7 +137,8 @@ header
     background-position: center center
     border-radius: 50px
 
-#poster
+#poster,
+#headshot
     // background-image: url('../images/poster.png')
     background-size: contain
     background-position: center center
