--- a/queertk/production/templates/production.html
+++ b/queertk/production/templates/production.html
@@ -20,12 +20,17 @@
 {% endif %}
 <ol>
     {% for c in credits %}
-    <li>{{ c.credit_name }} as {{ c.role }}</li>
+    <li><a href="/artist/{{ c.artist_id }}">{{ c.credit_name }}</a>, {{ c.role }}</li>
     {% endfor %}
 </ol>
 
 {% endblock %}
 
+{% block sidebar_image %}
+{% if poster %}
+<img src="{{ poster }}" id="poster" alt="" srcset="">
+{% endif %}
+{% endblock %}
 
 {% block aside %}
 
