--- a/queertk/templates/base.html
+++ b/queertk/templates/base.html
@@ -190,9 +190,9 @@
                         {% if sidebar %}
                         <div class="content-sidebar"
                             style="flex-grow: 1; min-width: 35%; max-width: 35%; position: sticky; top: 0; margin-top: 20px;">
-                            {% if poster %}
-                            <img src="{{ poster }}" id="poster" alt="" srcset="">
-                            {% endif %}
+                            {% block sidebar_image %}
+                            {% endblock %}
+                            
                             <div class="content-info" style="z-index: 1;">
                                 {% block aside %}
                                 {% endblock %}
