--- a/queertk/templates/base.html
+++ b/queertk/templates/base.html
@@ -205,6 +205,7 @@
             </div>
         </div>
 
+        <!-- Accessible modals per WAI Aria https://www.w3.org/TR/wai-aria-practices-1.1/examples/dialog-modal/dialog.html-->
         <div class="dialog-container" id="my-dialog" aria-hidden="true" aria-labelledby="my-dialog-title"
             aria-describedby="my-dialog-description">
             <div class="dialog-overlay" data-a11y-dialog-hide></div>
