--- a/queertk/static/sass/boilerplate.sass
+++ b/queertk/static/sass/boilerplate.sass
@@ -277,8 +277,9 @@ code
     margin: 0 .2rem
     font-size: 90%
     white-space: nowrap
-    background: #F1F1F1
-    border: 1px solid #E1E1E1
+    background: #f1f1f1b8
+    border: 1px solid #767676
+    color: #000
     border-radius: 4px
 pre > code
     display: block
