--- a/queertk/templates/base.html
+++ b/queertk/templates/base.html
@@ -169,12 +169,13 @@
             <!-- Sidebar GoTo Menu -->
             <aside class="sidebar">
                 <a href="{{ url_for('home') }}">Home</a>
-                <a href="/prod/3/say-cheesecake">Events</a>
-                <a href="#">News</a>
+                <a href="{{ url_for('events') }}">Events</a>
+                <a href="{{ url_for('news') }}">News</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
                 <a style="flex: 1 1 auto;"></a>
                 <a href="#">My Account</a>
+                <a href="#">Admin Portal</a>
                 <a data-a11y-dialog-show="my-dialog">About This Site</a>
             </aside>
 
